tests/health/gold/sdk/tests__uart-test.toit.gold
tests/uart-test.toit:124:30: error: Argument mismatch for 'UartWriter.try-write'
No argument named '--wait'
Valid named arguments include '--break-length', '--flush'
        written += port1.out.try-write bytes[written ..] --wait
                             ^~~~~~~~~
<pkg:pkg-host>/pipe.toit:329:6: warning: Deprecated 'platform'
  if platform == PLATFORM_WINDOWS:
     ^~~~~~~~
<pkg:pkg-host>/pipe.toit:329:18: warning: Deprecated 'PLATFORM-WINDOWS'
  if platform == PLATFORM_WINDOWS:
                 ^~~~~~~~~~~~~~~~
<pkg:pkg-host>/directory.toit:138:6: warning: Deprecated 'platform'
  if platform == PLATFORM_WINDOWS:
     ^~~~~~~~
<pkg:pkg-host>/directory.toit:138:18: warning: Deprecated 'PLATFORM-WINDOWS'
  if platform == PLATFORM_WINDOWS:
                 ^~~~~~~~~~~~~~~~
